# EsameParallelProgPatternRec

./: CMakeLists.txt  README.md  main.cpp  main.py  pattern_recognition.cpp  pattern_recognition.h  pattern_recognition.py  pattern_recognition_parallel.cpp  pattern_recognition_parallel.py  pattern_recognition_seq.py  utils.cpp  utils.h  utils.py
